<resources>
    <string name="app_name">iSocial</string>
    <string name="hello">Hello World!</string>
    <string name="co">Connexion</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="existing_acc">Compte existant</string>
    <string name="hello_">Bonjour !</string>
    <string name="log_fail">E-mail ou mot de passe incorrect</string>
    <string name="signup_fail">Erreur d\'inscription</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="hint_publication">A quoi pensez vous ?</string>
    <string name="write_something">Écrivez une publication</string>
    <string name="publish">Publier</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="je_n_ai_pas_de_compte">Je n\'ai pas de compte</string>
    <string name="signup">S\'inscrire</string>
    <string name="signin">Se connecter</string>
    <string name="no_account">Je n\'ai pas de compte</string>
    <string name="have_account">J\'ai un compte</string>
    <string name="failed_authentication">Échec de l\'authentification.</string>
    <string name="mail_mdp_incorr">E-mail ou mot de passe incorrect</string>
    <string name="signed_in">Vous êtes connecté</string>
    <string name="existing_account">You have an account</string>
    <string name="inscription">Inscription</string>
    <string name="connex">Connexion</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="j_ai_un_compte">J\'ai un compte</string>
    <string name="Name">Name</string>
    <string name="Content">Content</string>
    <string name="age">Age</string>
    <string name="comments">Commentaires :</string>
    <string name="commentContent">Comment</string>
    <string name="commentsText">Votre commentaire...</string>
    <string name="mail">Email</string>
    <string name="date">Date</string>
    <string name="activityfeed">Fil d\'actualité</string>
    <string name="comm">Commentaire :</string>
</resources>
