<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <ImageView
        android:id="@+id/changeProfilImage"
        android:layout_width="157dp"
        android:layout_height="158dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <TextView
        android:id="@+id/dateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/date_de_naissance"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProfile" />

    <TextView
        android:id="@+id/mailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/adresse_mail"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateProfile" />

    <TextView
        android:id="@+id/connexionProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/connex"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailProfile" />

    <ImageView
        android:id="@+id/imageViewUserEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="84dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/nameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeProfilImage" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="78dp"
        android:background="#FF9800"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewFeed">


        <ImageButton
            android:id="@+id/accessNewBTN"
            android:layout_width="144dp"
            android:layout_height="156dp"
            android:layout_gravity="center_horizontal|center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/comment" />

        <ImageButton
            android:id="@+id/accessFeedBTN"
            android:layout_width="131dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal|center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/feed" />

        <ImageButton
            android:id="@+id/accessProfileBTN"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal|center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/user" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>