<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="251dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="384dp"
            android:layout_height="83dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:minHeight="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardViewPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewNamePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Name"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewUserPost"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewContentPost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewUserPost"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNamePost" />

                <ImageView
                    android:id="@+id/imageViewUserPost"
                    android:layout_width="67dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textViewDatePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/date"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewNamePost"
                    app:layout_constraintStart_toEndOf="@+id/textViewNamePost"
                    app:layout_constraintTop_toTopOf="@+id/textViewNamePost" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/Name"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewUser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContent2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewUser" />

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="67dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="145dp"
            android:layout_marginStart="92dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewContent2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewUser"
            app:layout_constraintVertical_bias="0.73"
            app:srcCompat="@android:drawable/ic_menu_camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="@string/comments"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"

        android:layout_marginTop="60dp"
        android:text="@string/comments"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewComments"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextComment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComments"
        android:layout_width="402dp"
        android:layout_height="490dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        android:layout_width="394dp"
        android:layout_height="241dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComments" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="299dp"
        android:layout_height="61dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/commentsText"
        android:inputType="textPersonName"
        android:text="@string/comm"
        app:layout_constraintBottom_toTopOf="@+id/textViewComments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/buttonPublishComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/publish"
        app:layout_constraintBottom_toBottomOf="@+id/editTextComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextComment"
        app:layout_constraintTop_toTopOf="@+id/editTextComment" />
        android:layout_height="0dp"
        android:layout_marginStart="299dp"
        android:layout_marginTop="64dp"
        android:text="@string/publish"
        app:layout_constraintStart_toStartOf="@+id/editTextComment"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

